# turboquant-wasm

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.cjs  index.d.ts  index.mjs  index.node.mjs  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml  sync-github-packages.yml
benchmarks/: node_bench.js  realworld_test.js  render_charts.js  wasm_analysis.md
benchmarks/results/: 2026-04-08-m1-max-node22-realworld.txt  2026-04-08-m1-max-node22.json  2026-04-09-m1-max-node22.json  analysis-derived-comparison.json
cookbook/: README.md  browser-extension.md  browser-search.md  client-rag.md  desktop-mobile.md  edge-serverless.md
examples/: README.md
examples/browser/: README.md  index.html
examples/cloudflare/: README.md  worker.js  wrangler.toml
examples/onnx-webgpu/: README.md  index.html
examples/transformers-js/: README.md  index.html
src/: lib.rs
tests/: web.rs
ts/: index.ts
