[package]
name = "turboquant-wasm"
version = "0.1.1"
edition = "2021"
authors = ["Zakaria Laabsi"]
description = "TurboQuant vector quantization for the browser — Rust→WASM with TypeScript bindings"
license = "Apache-2.0"
repository = "https://github.com/zlaabsi/turboquant-wasm"
keywords = ["turboquant", "wasm", "vector-search", "quantization", "embeddings"]
categories = ["wasm", "compression", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = "z"      # optimize for size (important for WASM)
strip = true
codegen-units = 1
